Added Projects page

--- a/views/projects.hbs
+++ b/views/projects.hbs
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>About</title>
+    <title>Projects</title>
 </head>
 <body>
-    {{> header}}
-<p>This is an about page X</p>
+{{> header}}
+<p>My portfolio</p>
 {{> footer}}
 </body>
 </html>
